syntax = "proto3";

package dummy_debug;
option go_package = "github.com/oasislabs/ekiden/go/grpc/dummydebug";

service DummyDebug {
    // Manually do a tick and notify subscribers.
    rpc AdvanceEpoch (AdvanceEpochRequest) returns (AdvanceEpochResponse) {}
    // Watch the registry and wait for given number of compute nodes.
    rpc WaitNodes (WaitNodesRequest) returns (WaitNodesResponse) {}
}

message AdvanceEpochRequest {}

message AdvanceEpochResponse {}

message WaitNodesRequest {
    // Number of nodes to wait for.
    uint64 nodes = 1;
}

message WaitNodesResponse {}
